# pico_plant

./: Cargo.toml  README.md  elf_build.sh  run.sh  rust-toolchain.toml
.cargo/: config.toml
src/: dht22.rs  main.rs  soil.rs
src/wifi/: mod.rs  spi.rs
